<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hop for mixpanel</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_graph">Show graph event</string>
    <string name="title_activity_webview_graph">Webview_graph</string>
    <string name="title_activity_webview_graph1">Webview_graph1</string>
    <string name="menu_event">Event</string>
    <string name="pref_event_type">type</string>
    <string name="pref_event_type_summary">The analysis type you would like to get data for events.</string>
    <string name="spinner_funnel">Select Funnel</string>

    <string-array name="pref_event_type_name">
        <item>General</item>
        <item>Unique</item>
        <item>Average</item>
    </string-array>
    <string-array name="pref_event_type_values">
        <item>general</item>
        <item>unique</item>
        <item>average</item>
    </string-array>
    <string-array name="pref_event_unit_name">
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string-array name="pref_event_unit_values">
        <item>minute</item>
        <item>hour</item>
        <item>day</item>
        <item>week</item>
        <item>month</item>
    </string-array>
    <string-array name="pref_event_event_name">
        <item>Minute</item>
        <item>Hour</item>
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string-array name="pref_event_event_values">
        <item>minute</item>
        <item>hour</item>
        <item>day</item>
        <item>week</item>
        <item>month</item>
    </string-array>

    <string name="title_activity_prefrenceactivity">Prefrenceactivity</string>
    <string name="pref_event_unit">Unit</string>
    <string name="pref_event_unit_summary">It determines the level of granularity of the data you get back.**Note that you cannot get hourly uniques.**</string>
    <string name="pref_event_interval">Interval</string>
    <string name="pref_event_interval_summary">The number of \"units\" to return data for - minutes, hours, days, weeks, or months.</string>
    <string name="pref_event_event">Event</string>
    <string name="pref_event_event_summary">The event or events that you wish to get data for</string>
    <string name="title_activity_event_activity">Event_activity</string>
    <string name="event_setting">Event Setting</string>
    <string name="title_activity_splash">Splash</string>
    <string name="api_key">Api Key</string>
    <string name="api_key_summary">Please enter your api key</string>
    <string name="api_secret">Api secret</string>
    <string name="api_secret_summary">Please enter your api secret</string>
    <string name="api_conf">Setting</string>
    <string name="home_screen_text">Top events of the day</string>
    <string name="conf_summary">Please enter your api key and api secret.API key can be found on your account page under API Information.  API secret is a secret API key corresponding to the project. You should never give this out to anyone or show it.</string>
    <string name="title_activity_temp">Temp</string>
    <string name="title_activity_funnel_home">Funnel_home</string>
    <string name="title_activity_funnel_home1">Funnel_home1</string>
    <string name="title_activity_funnel">Funnel</string>
    <string name="meun_funnel">Funnel</string>
    <string name="menu_segmentation">Segmentation</string>
     
    <string name="graph_button">Change</string>
    <string name="event_type">Type</string>
    <string name="refresh">refresh</string>
    <string name="event_filter">Modify</string>
    <string name="title_activity_funnel_activity">Funnel_activity</string>
    <string name="title_activity_landing_activity">Landing_activity</string>
    <string name="title_activity_about">About</string>
    <string name="landing_more">More</string>
    <string name="landing">More</string>
    <string name="event_top_setting">Modify</string>
    <string name="top_event">Limit</string>
    <string name="event_top_limit">The maximum number of events to return.  The maximum this value can be is 100</string>
    <string name="title_activity_prefrenceactivity_event_top">Prefrenceactivity_event_top</string>
    <string name="title_activity_new_landing">New_landing</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_home_graph">Home_graph</string>
    <string name="Search">Search</string>
    <string name="overview">&#xf080;</string>
    <string name="allevent">&#xF002;</string>
    <string name="topevent">&#xF005;</string>
    <string name="about">&#xF129;</string>
        <string name="live">&#xF0E7;</string>
       <string name="people">&#xF183;</string>
           <string name="funnel">&#xF0C3;</string>
       <string name="stream">&#xF0EC;</string>
        
    
    
    
    
    <string name="graphno">&#xF088;</string>
    <string name="arrow">&#xF060;</string>
    <string name="home_icon_list">&#xF10C;</string>
    <string name="arrow_right">&#xF054;</string>
    <string name="refresh1">&#xF021;</string>
    <string name="signal">&#xF012;</string>
    <string name="keyboard">&#xF11C;</string>
    <string name="next">&#xF0DA;</string>
    <string name="previous">&#xF0D9;</string>
    <string name="share">&#xF045;</string>
    <string name="rate">&#xF005;</string>
     <string name="down">&#xF149;</string>
        <string name="up">&#xF148;</string>
     <string name="time">&#xF017;</string>
    <string name="globe">&#xF041;</string>
    <string name="eye">&#xF06E;</string>
    <string name="from">&#xF064;</string>
    <string name="bullet">&#xF111;</string>
    <string name="listmore">&#xF103;</string>
    <string name="email">&#xF0E0;</string>
    
     
    
    <string name="skip">Skip</string>
    <string name="crd1">&lt;a href="https://bitbucket.org/danielnadeau/holographlibrary " >Holograph library&lt;/a></string>
    <string name="crd2">&lt;a href="http://actionbarsherlock.com/">Actionbar sherlock&lt;/a></string>
    <string name="crd3">&lt;a href="http://viewpagerindicator.com/">Viewpager indicator&lt;/a></string>
    <string name="crd4">&lt;a href="https://github.com/SimonVT/android-menudrawer">Android menudrawer&lt;/a></string>
    <string name="crd5">&lt;a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome&lt;/a></string>
    <string name="crd6">&lt;a href="http://www.bariol.com/">Bariol Font&lt;/a></string>
    <string name="crd7">&lt;a href="http://www.behance.net/gallery/Albatross-Free-Font/5147789">Albatross Font&lt;/a></string>

    <!-- spinner -->

    <string name="title_activity_funnel_final">Funnel_final</string>
    <string name="title_activity_funnel_display">Funnel_display</string>

</resources>