<?xml version="1.0" encoding="utf-8"?>
 

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >
       <com.mixpanel.src.Icon_font_button
        android:id="@+id/previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
        android:text="@string/previous"
         android:textColor="#f6f6f6"
         android:textSize="25dip"
        android:scaleType="centerInside"/>

    <com.mixpanel.src.Icon_font_button
        android:id="@+id/skip"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
       android:text="@string/skip"
         android:textColor="#1a1a1a"
         android:background="#9ccc00"
         android:textSize="25dip"
        android:scaleType="centerInside" />

    <com.mixpanel.src.Icon_font_button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
        android:text="@string/next"
         android:textColor="#f6f6f6"
         android:textSize="25dip"
        android:scaleType="centerInside" />

  </RelativeLayout>

   

    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip" />
  
</LinearLayout>