<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" 
    android:layout_weight="1">
   
     

         <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" 
            android:layout_weight="1">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                 android:layout_weight="0.2">

               <com.mixpanel.src.Icon_font
                android:id="@+id/item1"
                style="@style/MenuDrawer.Widget.Title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="40sp"
                android:background="@color/menu1"
                 android:text="@string/overview"
                 android:gravity="center"
                 android:layout_weight="1"/>
            </TableRow>
            
            <TableRow   android:layout_weight="0.2"
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                   >
               
            <com.mixpanel.src.Icon_font
                android:id="@+id/item2"
                style="@style/MenuDrawer.Widget.Title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                 android:textSize="40sp"
                 android:text="@string/allevent"
                  android:background="@color/menu2"
                  android:gravity="center"
                   android:layout_weight="1"/>
            </TableRow>
            
            
            <TableRow   android:layout_weight="0.2"
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
               
                  >
            

            <com.mixpanel.src.Icon_font
                android:id="@+id/item3"
                 android:textSize="40sp"
                style="@style/MenuDrawer.Widget.Title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                  android:text="@string/topevent"
                  android:gravity="center"
                   android:background="@color/menu3"
                  android:layout_weight="1"/>
            </TableRow>
            
            
            
            <TableRow   android:layout_weight="0.2"
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                 >
               <com.mixpanel.src.Icon_font
                android:id="@+id/item4"
                 android:textSize="40sp"
                style="@style/MenuDrawer.Widget.Title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                 android:text="@string/about"
                 android:gravity="center"
                  android:background="@color/menu4"
                 android:layout_weight="1"/>
            </TableRow>
            
            
            
            </TableLayout>
        
        
    
 
     
    
</RelativeLayout>