<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
     android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="#fff" >

        <TextView
            android:id="@+id/stream_first_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="5 hour ago" />

        <com.mixpanel.src.Icon_font
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/stream_first_time"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/stream_first_time"
            android:text="@string/time" />

        <com.mixpanel.src.Icon_font
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/stream_first_came_from"
            android:layout_alignBottom="@+id/stream_first_came_from"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:text="@string/from" />

        <TextView
            android:id="@+id/stream_first_came_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/textView3"
            android:text="www.google.com" />

        <TextView
            android:id="@+id/stream_first_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/stream_first_came_from"
            android:layout_below="@+id/textView5"
            android:text="www.fingo.com"
             android:textAppearance="?android:attr/textAppearanceMedium" />


        <com.mixpanel.src.Icon_font
            android:id="@+id/Icon_font01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/stream_first_view"
            android:layout_alignBottom="@+id/stream_first_view"
            android:layout_alignParentLeft="true"
             android:layout_marginLeft="5dp"
            
            android:text="@string/eye" />

    </RelativeLayout>

</LinearLayout>